--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main">
       <div class="copy-container">
         <h2>MY PORTFOLIO</h2>
-        <img src="images/logo-dede.JPG">
+        <img src="images/logo-dede.jpg">
       </div>
       
       <div class="about">
